EXTRA_DIST = \
	GtkDocConfig.cmake \
	GtkDocConfigVersion.cmake.in	 \
	GtkDocScanGObjWrapper.cmake

CLEANFILES = \
  GtkDocConfigVersion.cmake

cmakedir = $(libdir)/cmake/GtkDoc
cmake_DATA = \
	GtkDocConfig.cmake \
	GtkDocConfigVersion.cmake \
	GtkDocScanGObjWrapper.cmake

-include $(top_srcdir)/git.mk
