EXTRA_DIST = \
	GtkDocConfig.cmake \
	GtkDocConfigVersion.cmake.in	 \
	GtkDocScanGObjWrapper.cmake \
	meson.build

CLEANFILES = \
  GtkDocConfigVersion.cmake

cmakedir = $(datadir)/cmake/GtkDoc
cmake_DATA = \
	GtkDocConfig.cmake \
	GtkDocConfigVersion.cmake \
	GtkDocScanGObjWrapper.cmake

-include $(top_srcdir)/git.mk
